force-app/main/default/objects/CreditMemo/fields/Is_Cancelled_Credit_Memo__c.field-meta.xml
<CustomField>
    <fullName>Is_Cancelled_Credit_Memo__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This flag is set to true in the &quot;Discount an Item&quot; flow if the credit memo is created for a 100% discount as a result of Amaware cancellation.</description>
    <inlineHelpText>This flag is set to true in the &quot;Discount an Item&quot; flow if the credit memo is created for a 100% discount as a result of Amaware cancellation.</inlineHelpText>
    <label>Is Cancelled Credit Memo</label>
    <type>Checkbox</type>
</CustomField>