force-app/main/default/objects/CreditMemo/fields/IsExportedToSAP__c.field-meta.xml
<CustomField>
    <fullName>IsExportedToSAP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Exported To SAP</label>
    <type>Checkbox</type>
</CustomField>