force-app/main/default/objects/CreditMemo/fields/ReferenceRefund__c.field-meta.xml
<CustomField>
    <fullName>ReferenceRefund__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reference Refund</label>
    <referenceTo>Refund</referenceTo>
    <relationshipLabel>Reference Refunds</relationshipLabel>
    <relationshipName>ReferenceRefunds</relationshipName>
    <type>Lookup</type>
</CustomField>