force-app/main/default/objects/CreditMemo/fields/SFMC_RefundComplete_Email_Sent__c.field-meta.xml
<CustomField>
    <fullName>SFMC_RefundComplete_Email_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SFMC email sent status</description>
    <label>SFMC_RefundComplete_Email_Sent</label>
    <type>Checkbox</type>
</CustomField>